--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,6 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+
 
 @theme inline {
   --color-background: var(--background);
@@ -12,15 +9,37 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@theme {
+  --color-background: var(--color-background);
+  --color-header: var(--color-background);
+  --color-card-bg: var(--color-card-bg);
+  --color-card-border: var(--color-card-bg);
+  --color-text: var(--color-text);
+  --color-subtext: var(--color-subtext);
+  --color-color1: var(--color-color1);
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+:root {
+  --color-background: #FFFFFF;
+  --color-header: #F5F5F7;
+  --color-card-bg: #FFFFFF;
+  --color-card-border: #66339966;
+  --color-text: #1C1C1C;
+  --color-subtext: #663399;
+  --color-color1: #a0d2eb;
+}
+
+/* .dark {
+
+} */
+
+/* @media (prefers-color-scheme: dark) {
+  :root {
+    /* --background: #0a0a0a;
+    --foreground: #ededed; */
+  /* }
+} */
+
+button {
+  cursor: pointer;
 }
